--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/users/ldapserverList.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/users/ldapserverList.xhtml
@@ -30,13 +30,13 @@
         </p:column>
         <p:column headerText="#{msgs.actions}" styleClass="actionsColumn">
             <h:form id="actionForm">
-                <h:link outcome="ldapserverEdit">
+                <h:link outcome="ldapserverEdit"
+                        rendered="#{SecurityAccessController.isAdminOrHasAuthorityGlobal('editLdapServer')}">
                     <f:param name="id" value="#{item.id}" />
                     <i class="fa fa-pencil-square-o fa-lg"/>
                 </h:link>
-                <p:commandLink id="deleteLdapserver"
-                               action="#{LdapServerForm.delete}"
-                               title="#{msgs.delete}"
+                <p:commandLink id="deleteLdapserver" action="#{LdapServerForm.delete}" title="#{msgs.delete}"
+                               rendered="#{SecurityAccessController.isAdminOrHasAuthorityGlobal('deleteLdapServer')}"
                                update="usersTabView:ldapServersTable">
                     <h:outputText><i class="fa fa-trash-o"/></h:outputText>
                     <f:setPropertyActionListener value="#{item.id}" target="#{LdapServerForm.ldapServerById}"/>
