--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/desktop/processesWidget.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/desktop/processesWidget.xhtml
@@ -31,14 +31,14 @@
         </p:column>
         <p:column headerText="#{msgs.actions}" styleClass="actionsColumn process-table-column">
             <h:form id="actionForm">
-                <h:link id="editProcess"
-                        outcome="/pages/processEdit"
-                        title="#{msgs.processEdit}">
+                <h:link id="editProcess" outcome="/pages/processEdit" title="#{msgs.processEdit}"
+                        rendered="#{SecurityAccessController.isAdminOrHasAuthorityGlobalOrForClient('editProcess',process.project.client.id)}">
                     <i class="fa fa-pencil-square-o fa-lg"/>
                     <f:param name="id" value="#{process.id}"/>
                     <f:param name="referer" value="desktop"/>
                 </h:link>
-                <h:commandLink id="readXML" action="#{Metadaten.readXml}" title="#{msgs.metadataEdit}">
+                <h:commandLink id="readXML" action="#{Metadaten.readXml}" title="#{msgs.metadataEdit}"
+                               rendered="#{SecurityAccessController.isAdminOrHasAuthorityGlobalOrForClient('editProcessMetaData',process.project.client.id)}">
                     <f:setPropertyActionListener value="desktop" target="#{Metadaten.referringView}"/>
                     <h:outputText><i class="fa fa-file-o"/></h:outputText>
                     <f:param name="ProzesseID" value="#{process.id}"/>
@@ -49,9 +49,8 @@
                     <h:outputText><i class="fa fa-file-code-o"/></h:outputText>
                     <f:setPropertyActionListener value="#{process.id}" target="#{ProcessForm.processByID}"/>
                 </h:commandLink>
-                <p:commandLink id="deleteProcess"
-                               action="#{ProcessForm.delete}"
-                               title="#{msgs.delete}"
+                <p:commandLink id="deleteProcess" action="#{ProcessForm.delete}" title="#{msgs.delete}"
+                               rendered="#{SecurityAccessController.isAdminOrHasAuthorityGlobalOrForClient('deleteProcess',process.project.client.id)}"
                                update="processTable">
                     <h:outputText><i class="fa fa-trash-o"/></h:outputText>
                     <f:setPropertyActionListener value="#{process.id}" target="#{ProcessForm.processByID}"/>
