Change relationship between user group and client to many to one

--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/usergroupEdit/details.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/usergroupEdit/details.xhtml
@@ -16,7 +16,7 @@
         xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
         xmlns:p="http://primefaces.org/ui">
 
-    <p:panelGrid columns="1" layout="grid">
+    <p:panelGrid columns="2" layout="grid">
         <p:row>
             <div>
                 <p:outputLabel for="titleInput" value="#{msgs.title}"/>
@@ -24,6 +24,15 @@
                              value="#{UserGroupForm.userGroup.title}" placeholder="#{msgs.title}"
                              required="#{empty param['editForm:saveButtonToggler']}"/>
             </div>
+            <div>
+                <p:outputLabel for="client" value="#{msgs.client}"/>
+                <p:selectOneMenu id="client" converter="#{clientConverter}" value="#{UserGroupForm.userGroup.client}">
+                    <f:selectItems value="#{DocketForm.clients}"/>
+                    <p:ajax event="change" oncomplete="toggleSave()"/>
+                </p:selectOneMenu>
+            </div>
+        </p:row>
+        <p:row>
             <div>
                 <p:panelGrid columns="2" layout="grid">
                     <!--global authorities-->
