--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/usergroupEdit/details.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/usergroupEdit/details.xhtml
@@ -26,7 +26,7 @@
                                  required="#{empty param['editForm:saveButtonToggler']}"/>
                 </div>
             </p:row>
-            <p:row>
+            <p:row rendered="#{SessionClientController.currentSessionClient eq null}">
                 <div>
                     <p:outputLabel for="client" value="#{msgs.client}"/>
                     <p:selectOneMenu id="client" converter="#{clientConverter}" value="#{UserGroupForm.userGroup.client}">
@@ -35,6 +35,7 @@
                     </p:selectOneMenu>
                 </div>
             </p:row>
+            <p:row rendered="#{SessionClientController.currentSessionClient ne null}" />
         </p:panelGrid>
             <div>
                 <p:panelGrid columns="2" layout="grid">
