--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/taskEdit/taskEditUsergroups.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/taskEdit/taskEditUsergroups.xhtml
@@ -16,7 +16,7 @@
         xmlns:h="http://xmlns.jcp.org/jsf/html"
         xmlns:p="http://primefaces.org/ui"
         xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
-    <p:dataTable var="usergroup" id="usergroupTable" value="#{ProcessForm.task.userGroups}">
+    <p:dataTable var="usergroup" id="usergroupTable" value="#{ProcessForm.task.roles}">
         <p:column headerText="#{msgs.title}">
             <h:outputText value="#{usergroup.title}"/>
         </p:column>
