--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/users/roleList.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/users/roleList.xhtml
@@ -17,29 +17,29 @@
         xmlns:h="http://xmlns.jcp.org/jsf/html"
         xmlns:p="http://primefaces.org/ui">
     <p:dataTable var="item"
-                 id="userGroupsTable"
-                 value="#{UserGroupForm.lazyDTOModel}"
+                 id="rolesTable"
+                 value="#{RoleForm.lazyDTOModel}"
                  lazy="true"
                  paginator="true"
                  rows="#{LoginForm.myBenutzer.tableSize}"
                  paginatorTemplate="{FirstPageLink} {PreviousPageLink} {CurrentPageReport} {NextPageLink} {LastPageLink}"
                  paginatorPosition="bottom">
-        <p:column headerText="#{msgs.userGroup}">
+        <p:column headerText="#{msgs.role}">
             <h:outputText value="#{item.title}"/>
         </p:column>
         <p:column headerText="#{msgs.actions}" styleClass="actionsColumn">
             <h:form id="actionForm">
-                <h:link outcome="usergroupEdit" title="#{msgs.userGroupEdit}"
-                        rendered="#{SecurityAccessController.isAdminOrHasAuthorityGlobalOrForClient('editUserGroup', item.client.id)}">
+                <h:link outcome="roleEdit" title="#{msgs.roleEdit}"
+                        rendered="#{SecurityAccessController.isAdminOrHasAuthorityGlobalOrForClient('editRole', item.client.id)}">
                     <f:param name="id" value="#{item.id}" />
                     <i class="fa fa-pencil-square-o fa-lg"/>
                 </h:link>
-                <p:commandLink id="deleteUsergroup" action="#{UserGroupForm.delete}" title="#{msgs.delete}"
-                               rendered="#{SecurityAccessController.isAdminOrHasAuthorityGlobalOrForClient('deleteUserGroup', item.client.id)}"
-                               update="usersTabView:userGroupsTable">
+                <p:commandLink id="deleteRole" action="#{RoleForm.delete}" title="#{msgs.delete}"
+                               rendered="#{SecurityAccessController.isAdminOrHasAuthorityGlobalOrForClient('deleteRole', item.client.id)}"
+                               update="usersTabView:rolesTable">
                     <h:outputText><i class="fa fa-trash-o"/></h:outputText>
-                    <f:setPropertyActionListener value="#{item.id}" target="#{UserGroupForm.userGroupById}"/>
-                    <p:confirm header="#{msgs.confirmDelete}" message="#{msgs.confirmDeleteUsergroup}"
+                    <f:setPropertyActionListener value="#{item.id}" target="#{RoleForm.roleById}"/>
+                    <p:confirm header="#{msgs.confirmDelete}" message="#{msgs.confirmDeleteRole}"
                                icon="ui-icon-alert"/>
                 </p:commandLink>
             </h:form>
