--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/workflowEdit/workflowEditDetails.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/workflowEdit/workflowEditDetails.xhtml
@@ -29,8 +29,8 @@
                              required="true"/>
                 <h:inputHidden value="#{WorkflowForm.xmlDiagram}" id="xmlDiagram"/>
 
-                <p:selectOneMenu id="userGroupId" value="#{WorkflowForm.userGroupId}" style="visibility: hidden">
-                    <f:selectItems value="#{WorkflowForm.userGroups}" />
+                <p:selectOneMenu id="roleId" value="#{WorkflowForm.roleId}" style="visibility: hidden">
+                    <f:selectItems value="#{WorkflowForm.roles}" />
                 </p:selectOneMenu>
             </div>
 
