Change methods in frontend to not use AnyClient

--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/desktop/processesWidget.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/desktop/processesWidget.xhtml
@@ -32,13 +32,13 @@
         <p:column headerText="#{msgs.actions}" styleClass="actionsColumn process-table-column">
             <h:form id="actionForm">
                 <h:link id="editProcess" outcome="/pages/processEdit" title="#{msgs.processEdit}"
-                        rendered="#{SecurityAccessController.isAdminOrHasAuthorityGlobalOrForClient('editProcess',process.project.client.id)}">
+                        rendered="#{SecurityAccessController.isAdminOrHasAuthorityGlobalOrForClient('editProcess')}">
                     <i class="fa fa-pencil-square-o fa-lg"/>
                     <f:param name="id" value="#{process.id}"/>
                     <f:param name="referer" value="desktop"/>
                 </h:link>
                 <h:commandLink id="readXML" action="#{Metadaten.readXml}" title="#{msgs.metadataEdit}"
-                               rendered="#{SecurityAccessController.isAdminOrHasAuthorityGlobalOrForClient('editProcessMetaData',process.project.client.id)}">
+                               rendered="#{SecurityAccessController.isAdminOrHasAuthorityGlobalOrForClient('editProcessMetaData')}">
                     <f:setPropertyActionListener value="desktop" target="#{Metadaten.referringView}"/>
                     <h:outputText><i class="fa fa-file-o"/></h:outputText>
                     <f:param name="ProzesseID" value="#{process.id}"/>
@@ -50,7 +50,7 @@
                     <f:setPropertyActionListener value="#{process.id}" target="#{ProcessForm.processByID}"/>
                 </h:commandLink>
                 <p:commandLink id="deleteProcess" action="#{ProcessForm.delete}" title="#{msgs.delete}"
-                               rendered="#{SecurityAccessController.isAdminOrHasAuthorityGlobalOrForClient('deleteProcess',process.project.client.id)}"
+                               rendered="#{SecurityAccessController.isAdminOrHasAuthorityGlobalOrForClient('deleteProcess')}"
                                update="processTable">
                     <h:outputText><i class="fa fa-trash-o"/></h:outputText>
                     <f:setPropertyActionListener value="#{process.id}" target="#{ProcessForm.processByID}"/>
