--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/users/ldapgroupList.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/users/ldapgroupList.xhtml
@@ -32,16 +32,16 @@
         <p:column headerText="#{msgs.actions}" styleClass="actionsColumn">
             <h:form id="actionForm">
                 <h:link outcome="ldapgroupEdit"
-                        rendered="#{SecurityAccessController.isAdminOrHasAuthorityGlobal('editLdapGroup')}">
+                        rendered="#{SecurityAccessController.hasAuthorityGlobal('editLdapGroup')}">
                     <f:param name="id" value="#{item.id}"/>
                     <i class="fa fa-pencil-square-o fa-lg"/>
                 </h:link>
                 <h:commandLink action="#{LdapGroupForm.duplicateLdapGroup(item.id)}" title="#{msgs.duplicateLdapGroup}"
-                               rendered="#{SecurityAccessController.isAdminOrHasAuthorityGlobal('addLdapGroup')}">
+                               rendered="#{SecurityAccessController.hasAuthorityGlobal('addLdapGroup')}">
                     <i class="fa fa-clone fa-lg"/>
                 </h:commandLink>
                 <p:commandLink id="deleteLdapgroup" action="#{LdapGroupForm.delete}" title="#{msgs.delete}"
-                               rendered="#{SecurityAccessController.isAdminOrHasAuthorityGlobal('deleteLdapGroup')}"
+                               rendered="#{SecurityAccessController.hasAuthorityGlobal('deleteLdapGroup')}"
                                update="usersTabView:ldapGroupsTable">
                     <h:outputText><i class="fa fa-trash-o"/></h:outputText>
                     <f:setPropertyActionListener value="#{item.id}" target="#{LdapGroupForm.ldapGroupById}"/>
