--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/users/ldapserverList.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/users/ldapserverList.xhtml
@@ -31,12 +31,12 @@
         <p:column headerText="#{msgs.actions}" styleClass="actionsColumn">
             <h:form id="actionForm">
                 <h:link outcome="ldapserverEdit"
-                        rendered="#{SecurityAccessController.isAdminOrHasAuthorityGlobal('editLdapServer')}">
+                        rendered="#{SecurityAccessController.hasAuthorityGlobal('editLdapServer')}">
                     <f:param name="id" value="#{item.id}" />
                     <i class="fa fa-pencil-square-o fa-lg"/>
                 </h:link>
                 <p:commandLink id="deleteLdapserver" action="#{LdapServerForm.delete}" title="#{msgs.delete}"
-                               rendered="#{SecurityAccessController.isAdminOrHasAuthorityGlobal('deleteLdapServer')}"
+                               rendered="#{SecurityAccessController.hasAuthorityGlobal('deleteLdapServer')}"
                                update="usersTabView:ldapServersTable">
                     <h:outputText><i class="fa fa-trash-o"/></h:outputText>
                     <f:setPropertyActionListener value="#{item.id}" target="#{LdapServerForm.ldapServerById}"/>
