--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/header.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/header.xhtml
@@ -71,7 +71,7 @@
                             </h:panelGroup>
 
                             <h:panelGroup
-                                rendered="#{SecurityAccessController.hasAuthorityGlobalOrForClient('viewAllProcesses')}">
+                                rendered="#{SecurityAccessController.hasAnyAuthorityGlobalOrForClient('viewAllProcesses, viewAllBatches')}">
                                 <li class="nav-pic-text"><h:link value="#{msgs.processes}" id="linkProcesses"
                                                                  outcome="processes"><i
                                     class="fa fa-hourglass-3 fa-lg"/></h:link></li>
