--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/processEdit/taskList.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/processEdit/taskList.xhtml
@@ -36,7 +36,7 @@
                 <h:graphicImage value="#{item.processingStatusEnum.bigImagePath}"
                                 title="#{item.processingStatusEnum.title}"
                                 alt="status"/>
-                <p:panel rendered="#{SecurityAccessController.hasAuthorityGlobalOrForClient('editTask')}">
+                <p:panel rendered="#{SecurityAccessController.hasAuthorityForClient('editTask')}">
                     <!-- Set workflow state to previous step -->
                     <p:commandButton action="#{ProcessForm.setTaskStatusDown}"
                                      id="taskStatusDown"
@@ -65,14 +65,14 @@
         <p:column rendered="#{SecurityAccessController.hasAnyAuthorityGlobalOrForClient('editTask, deleteTask')}"
                   headerText="#{msgs.actions}" id="taskAction" styleClass="actionsColumn">
             <h:link outcome="taskEdit" id="editTask"
-                    rendered="#{SecurityAccessController.hasAuthorityGlobalOrForClient('editTask')}"
+                    rendered="#{SecurityAccessController.hasAuthorityForClient('editTask')}"
                     title="#{msgs.detailsDesSchritts}">
                 <f:param name="id" value="#{item.id}"/>
                 <f:param name="referer" value="processEdit?id=#{item.process.id}"/>
                 <i class="fa fa-pencil-square-o fa-lg"/>
             </h:link>
             <p:commandLink id="deleteTask"
-                           rendered="#{SecurityAccessController.hasAuthorityGlobalOrForClient('deleteTask')}"
+                           rendered="#{SecurityAccessController.hasAuthorityForClient('deleteTask')}"
                            title="#{msgs.delete}"
                            action="#{ProcessForm.removeTask}"
                            immediate="true"
